<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_title_home" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_nav_pending"
        android:title="@string/nav_title_pending" />

    <item
        android:id="@+id/fabAddInvisible"
        android:visible="false"
        android:icon="@android:color/transparent"
        android:title="" />


    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/ic_nav_categories"
        android:title="@string/nav_title_categories" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_title_settings" />

</menu>