<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background"
    android:padding="@dimen/space_20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_tarjeta"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/space_8dp"/>

    <EditText
        android:id="@+id/etCardName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_tarjeta_nombre"
        android:inputType="textCapWords"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/space_16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dia_cierre"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/space_8dp"/>

    <EditText
        android:id="@+id/etClosingDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/closing_day_hint"
        android:inputType="number"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/space_16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_four_digits"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/space_8dp"/>

    <EditText
        android:id="@+id/etLast4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_four_digits_hint"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/space_16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_color"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/space_8dp"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/containerCardColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_8dp"/>
        
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/space_12dp">

        <Button
            android:id="@+id/btnDeleteCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/eliminar"
            android:layout_marginEnd="@dimen/space_8dp"/>

        <Button
            android:id="@+id/btnCancelCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/cancelar"
            android:layout_marginEnd="@dimen/space_8dp"/>

        <Button
            android:id="@+id/btnCreateCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/crear"/>
    </LinearLayout>

</LinearLayout>


