<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page_title_terms_privacy"
        android:textSize="@dimen/text_20sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/space_12dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvLegalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:textSize="@dimen/text_16sp"/>

    </ScrollView>

    <CheckBox
        android:id="@+id/cbAcceptTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_accept_text"
        android:layout_marginTop="@dimen/space_16dp"/>

    <Button
        android:id="@+id/btnAcceptAndContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept_and_continue"
        android:layout_marginTop="@dimen/space_12dp"
        android:enabled="false"/>

</LinearLayout>


